* Sun Jun 17 2012 Juan J. Martinez <jjm@usebox.net> 0.14.2-1
- FIX: glitch in the progress bar when moving to the next image
- FIX: two buttons not marked as translatable
- FIX: the translation for "Cancel" was missing

* Sat Jun 16 2012 Juan J. Martinez <jjm@usebox.net> 0.14.1-1
- FIX: error in the DBUS service enabling the progress bar

* Sat Jun 16 2012 Juan J. Martinez <jjm@usebox.net> 0.14-1
- NEW: chunked upload for less memory consumption when uploading
big files and detailed upload progress
- NEW: upload bandwidth throttling
- FIX: small UI tweaks
- FIX: configuration file converted to XML, YAML dependency will
be removed in next version
- FIX: set configuration file permissions to 0600

* Sat Apr 28 2012 Juan J. Martinez <jjm@usebox.net> 0.13-1
- NEW: removed Flickr::API and XML::Parser::Lite::Tree dependencies,
replaced by XML::Simple
- FIX: improved account token verification

* Wed Feb 29 2012 Juan J. Martinez <jjm@usebox.net> 0.12-1
- FIX: Polish translation updated, thanks to Piotr Drąg
- FIX: support for non ASCII characters in title and tags

* Sun Feb 12 2012 Juan J. Martinez <jjm@usebox.net> 0.11-1
- NEW: OAuth authentication
- FIX: added trasnlations to the desktop file

* Sun Feb 13 2011 Juan J. Martinez <jjm@usebox.net> 0.10-1
- NEW: DBus service (avoid more than one instence running)
- FIX: better consistency when adding pictures from different sources
- FIX: translations synced (es, fr, de, it, ga and pt)

* Sun Feb 6 2011 Juan J. Martinez <jjm@usebox.net> 0.09-1
- NEW: Add button to open a file chooser dialog to add new files to
the upload list
- FIX: Better privacy support providing the same functionality as Flickr
website, thanks to Peter (winston) for the report

* Thu Nov 6 2010 Juan J. Martinez <jjm@usebox.net> 0.08-1
- FIX: A race condition while uploading the images
- NEW: Russian translation, thanks to anaart

* Thu Aug 26 2010 Juan J. Martinez <jjm@usebox.net> 0.07-1
- NEW: photo title is now editable
